# OJ

./: .clang-format  .gitignore  APIProceed.cpp  APIProceed.hpp  CMakeLists.txt  Captcha.cpp  Captcha.hpp  Data  Database.cpp  Database.hpp  Database.sql  EmailVerificationCodes.cpp  EmailVerificationCodes.hpp  EmailVerifyCodes.cpp  EmailVerifyCodes.hpp  Exception.cpp  Exception.hpp  Files.cpp  Files.hpp  HTTPRequest.cpp  HTTPRequest.hpp  HTTPResponse.cpp  HTTPResponse.hpp  Install.bash  JudgeResult.cpp  JudgeResult.hpp  JudgingList.cpp  JudgingList.hpp  Logger.cpp  Logger.hpp  Passkey.cpp  Passkey.hpp  Privilege.hpp  Problem.cpp  Problem.hpp  Problems.cpp  Problems.hpp  README  README.md  Regexes.cpp  (+35 more)
.github/workflows/: cmake.yml
Code/: CompileError.cpp  CompileHack.cpp  Normal.cpp  SystemCallHack.cpp  SystemFileHack.cpp
HTML/: API.ts  AddProblem.html  AddUser.html  AddUser.js  CMakeLists.txt  CreatePasskey.html  CreatePasskey.js  EditProblem.html  EditProblem.js  EditSubmission.js  Logger.ts  Login.html  Login.js  LoginWithPasskey.html  LoginWithPasskey.js  Logout.html  Logout.js  MessagePipe.ts  Problem.html  Problem.js  Problems.html  Problems.js  Register.html  Register.js  ResetPassword.html  ResetPassword.js  Settings.html  Settings.js  Submission.html  Submission.js  Submissions.html  Submissions.js  Submit.js  UploadTestCase.html  UploadTestCase.js  User.html  User.js  Users.html  Users.js  Utilities.ts  (+10 more)
HTML/BootStrap/: AddProblem.js  EditProblem.html  EditProblem.js  EditSubmission.html  EditSubmission.js  Home.js  Login.js  Problem.html  Problem.js  Problems.html  Problems.js  Register.html  User.js  (+12 more)
Source/: APIProceed.cpp  APIProceed.hpp  Exception.hpp  Files.cpp  Files.hpp  HTTPRequest.cpp  HTTPResponse.cpp  HTTPResponse.hpp  JudgeResult.hpp  JudgingList.cpp  Logger.cpp  Passkey.cpp  Passkey.hpp  Problem.hpp  Problems.cpp  Problems.hpp  Regexes.cpp  Regexes.hpp  Role.hpp  Sample.hpp  Socket.cpp  Socket.hpp  Submission.cpp  Submission.hpp  Submissions.cpp  Submissions.hpp  TempTestData.hpp  TestCase.cpp  TestCaseData.hpp  TestGroup.hpp  TestGroupData.cpp  User.hpp  Users.hpp  Utilities.cpp  Utilities.hpp  WebDataProceed.cpp  main.cpp  test.cpp
Test/: HalfCorrect.cpp  InfinityLoop.cpp  InfinityNew.cpp  InfinityOutput.cpp  LinkingError.cpp  NoFileIO.cpp
jpeg/: jpeglib.h
reference/: Bootstamp.html  FluentUI.html  FluentUI2.html  constant.h  other.cpp  test.html
(+29 files in other folders)
